--- a/freeCodeCamp/react-project-beginner/src/index.css
+++ b/freeCodeCamp/react-project-beginner/src/index.css
@@ -1,33 +1,42 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body{
-  padding: 20px;
+  /* padding: 20px; */
   font-family: Arial, Helvetica, sans-serif;
-  background: #27292c;
   color: white;
 }
 
-h1{
-  margin-top: 30px;
-}
-
 .header {
+  padding: 20px;
+  background: #27292c;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  gap: 10px;
+}
+.header-heading {
+  color: #00D8FF;
 }
 
-.nav-logo {
-  width: 55px;
+.main-content {
+  padding: 20px;
+  background-color: #525a66;
+  background-image: url(/src/assets/react.svg);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 200px;
+  background-blend-mode: luminosity;
 }
 
-.nav-list {
-  display: flex;
-  list-style: none;
+.main-content--list {
+  padding:  20px 40px 40px 40px;
+  
 }
 
-.nav-list-item {
-  margin-left: 10px;
-  font-size: 1.1rem;
+.main-content--list-item::marker{
+  color: #00D8FF;
 }
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
